[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = molecule-containers
url = https://github.com/ansible-community/molecule-containers
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-containers/issues
    Release Management = https://github.com/ansible-community/molecule-containers/projects
    CI: Zuul = https://dashboard.zuul.ansible.com/t/ansible/builds?project=ansible-community/molecule-containers
    Mailing lists = https://docs.ansible.com/ansible/latest/community/communication.html#mailing-list-information
    Source Code = https://github.com/ansible-community/molecule-containers
description = Molecule Containers Driver :: run molecule tests on containers
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible by Red Hat
author_email = info@ansible.com
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent

    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    containers
    podman
    docker

[options]
use_scm_version = True
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    # https://github.com/ansible/ansible/blob/devel/packaging/requirements/requirements-containers.txt
    ansible
    molecule >= 3.0a4
    pyyaml >= 5.1, < 6

[options.extras_require]
test =
    flake8>=3.6.0, < 4

    mock>=3.0.5, < 4
    pytest-cov>=2.7.1, < 3
    pytest-dependency
    pytest-helpers-namespace>=2019.1.8, < 2020
    pytest-html>=1.21.0,<2.0; python_version < '3.6'
    pytest-html>=1.21.0; python_version >= '3.6'
    pytest-mock>=1.10.4, < 2
    pytest-verbose-parametrize>=1.7.0, < 2
    pytest-sugar>=0.9.2, < 1
    pytest-xdist>=1.29.0, < 2
    pytest>=4.6.3, < 5

[options.entry_points]
molecule.driver =
    containers = molecule_containers.driver:containers

[options.packages.find]
where = .

[tool:pytest]
addopts = -v -rxXs --doctest-modules --durations 10 --color=yes
doctest_optionflags = ALLOW_UNICODE ELLIPSIS
junit_suite_name = molecule_test_suite
norecursedirs = dist doc build .tox .eggs molecule/test/scenarios molecule/test/resources
testpaths = molecule/test/
filterwarnings =
    # remove once https://github.com/boto/boto3/pull/1603 is released
    ignore::DeprecationWarning:boto3
    # remove once https://github.com/boto/botocore/issues/1615 is released
    ignore::DeprecationWarning:botocore
    # remove once https://github.com/cookiecutter/cookiecutter/pull/1127 is released
    ignore::DeprecationWarning:cookiecutter
    # remove once https://github.com/pytest-dev/pytest-cov/issues/327 is released
    ignore::pytest.PytestWarning:pytest_cov

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203,D102
# TODO(ssbarnea): remove temporary skips one by one:
# [D102] Missing docstring in public method
# [D104] Missing docstring in public package
# 88 is official black default:
max-line-length = 88
per-file-ignores =
  docs/conf.py: D
  molecule/test/*: D100,D103,D104
